@@ -27,16 +27,10 @@ def main(argv):
 
 	## create some tables
 	c.execute('''create table chipset (name text, vendor text, family text)''')
-	c.execute('''create table filesystem (id integer, sha256 text, type text, compression text, offset integer, parentid integer, firmware integer)''')
-	c.execute('''create table device (id integer, vendor text, name text, version text, chipset text, upstream text)''')
-	c.execute('''create table firmware (id integer, sha256 text, version text, deviceid integer)''')
+	c.execute('''create table filesystem (id integer primary key autoincrement, sha256 text, type text, compression text, offset integer, parentid integer, firmware integer)''')
+	c.execute('''create table device (id integer primary key autoincrement, vendor text, name text, version text, chipset text, upstream text)''')
+	c.execute('''create table firmware (id integer primary key autoincrement, sha256 text, version text, deviceid integer)''')
 
-	## insert some test data
-	c.execute('''insert into chipset values ('AR7', 'Texas Instruments', 'MIPS')''')
-	c.execute('''insert into chipset values ('BCM6851', 'Broadcom', 'MIPS')''')
-	c.execute('''insert into chipset values ('BCM4712', 'Broadcom', 'MIPS')''')
-	c.execute('''insert into device values (1, 'Linksys', 'WRT54G', '2.0', 'BCM4712', '')''')
-	c.execute('''insert into firmware values (1, 'fa3e0f350293ff0a3e92ff6a702167bf798919236111e263fcc7f2f8539780dd', '4.21.1', 1)''')
 	conn.commit()
 	c.close()
 
